--- a/ALMSistemas/ALMDefault.html
+++ b/ALMSistemas/ALMDefault.html
@@ -93,5 +93,22 @@
 
 </body>
 
+<!--Modal Waiting-->
+<div class="modal" id="pleaseWaitDialog" data-backdrop="static" data-keyboard="false" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Please wait...</h4>
+            </div>
+            <div class="modal-body">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
+                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 40px">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </html>
 
